--- a/styles/style.css
+++ b/styles/style.css
@@ -1,91 +1,91 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
-.montserrat-normal{
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-  }
+.montserrat-normal {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+body {
+  border: 2px solid black;
   
-  body{
-
-  }
-  *{
-    margin: 0;
-    padding: 0;
-  }
+}
+* {
+  margin: 0;
+  padding: 0;
+}
 /* Shared styles */
-  .container{
-    width: 80%;
-    margin: 100px auto;
-  }
-.btn-primary{
-    color: rgb(255, 255, 255);
-font-family: Montserrat;
-font-size: 1.1rem;
-font-weight: 600;
-border-radius: 100px;
-border: none;
-padding: 15px 20px;
-
-box-shadow: 0px 2px 30px 0px rgba(252, 143, 73, 0.5);
-background: linear-gradient(69.40deg, rgb(251, 162, 79) -6.919%,rgb(255, 30, 30) 144.985%);
-
-
+.container {
+  width: 75%;
+  margin: 100px auto;
+  border: 2px solid tomato;
+ 
+}
+.btn-primary {
+  color: rgb(255, 255, 255);
+  font-family: Montserrat;
+  font-size: 1.1rem;
+  font-weight: 600;
+  border-radius: 100px;
+  border: none;
+  padding: 15px 20px;
+  box-shadow: 0px 2px 30px 0px rgba(252, 143, 73, 0.5);
+  background: linear-gradient(
+    69.4deg,
+    rgb(251, 162, 79) -6.919%,
+    rgb(255, 30, 30) 144.985%
+  );
+}
+.section-skip-diet{
+  width: 95%;
+  border: 2px solid blue;
+  margin: 0 auto;
+}
+.skip-container {
+  display: flex;
+  justify-content: space-between;
 }
 
-
-
-  .skip-container{
-    display: flex;
-    justify-content: space-between;
-
-  }
-
-  .skip-left{
-    /* border: 2px solid red; */
-    idth: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-
-  }
-  .skip-left> h1{
-    font-family: "Montserrat", sans-serif;
-    font-weight: 700;
-    font-size: 3.5rem;
-    
-    
-  }
-  .skip-left> p{
-    font-family: "Montserrat", sans-serif;
-    font-weight: 400;
-    font-size: 1.2rem;
-    
-
-   
-  }
-
-  .skip-right{
-    width: 100%;
-    /* border: 2px solid red; */
-    position: relative;
-
-  }
-
-  .skip{
-    color:rgb(255, 30, 30);
-  }
- img{
-    width: 50%;
-    margin-left: auto;
+.skip-left {
+  /* border: 2px solid red; */
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
-  .bg-img img{
-    width: 50%;
-    margin-left: auto;
-  }
-  .overley-img{
-    position: absolute;
-    left: -6%;
-    bottom: 3%;
-  }
+.skip-left > h1 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 3.5rem;
+
+}
+.skip-left > p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 1.2rem;
+  color: rgb(130, 130, 130);
+}
+
+.skip-right {
+  width: 100%;
+  /* border: 2px solid red; */
+  position: relative;
+}
+
+.skip {
+  color: rgb(255, 30, 30);
+}
+ .overley-img img {
+  width: 70%;
+  padding-left: 10%;
+}
+.bg-img img {
+  width: 60%;
+  padding-left: 20%;
+}
+.overley-img {
+  position: absolute;
+  left: -2%;
+  bottom: 4.5%;
+}
