--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,45 +1,64 @@
-@media screen and (max-width:576px) {
+@media screen and (max-width: 576px) {
+  .btn-primary {
+    font-size: 1rem;
+  }
 
-    .btn-primary {
-        font-size: 1rem;
-      }
-      
+  .container {
+    width: 90%;
+    margin: 70px auto;
+    border: 2px solid tomato;
+  }
+  .skip-container {
+    flex-direction: column;
+    gap: 3rem;
+  }
+  .skip-left > h1 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 2rem;
+  }
+  p {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+    color: rgb(130, 130, 130);
+  }
+  .overley-img img {
+    width: 90%;
+    padding-left: 0%;
+  }
+  .bg-img img {
+    width: 80%;
+    padding-left: 12%;
+  }
+  .overley-img {
+    position: absolute;
+    left: -2%;
+    bottom: 4.5%;
+  }
 
-    .container {
-        width: 90%;
-        margin: 70px auto;
-        border: 2px solid tomato;
-        
-      }
-      .skip-container {
-        flex-direction: column;
-        gap: 3rem;
-      }
-      .skip-left > h1 {
-        font-family: "Montserrat", sans-serif;
-        font-weight: 700;
-        font-size: 2rem;
-      }
-      .skip-left > p {
-        font-family: "Montserrat", sans-serif;
-        font-weight: 400;
-        font-size: 1rem;
-        color: rgb(130, 130, 130);
-      }
-      .overley-img img {
-        width: 90%;
-        padding-left: 0%;
-      }
-      .bg-img img {
-        width: 80%;
-        padding-left: 12%;
-      }
-      .overley-img {
-        position: absolute;
-        left: -2%;
-        bottom: 4.5%;
-      }
-      
-      
-    
+  .about-me {
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .about-me-right > h1 {
+    color: rgb(112, 112, 112);
+    font-family: Montserrat;
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
+
+  .about-me-left {
+    width: 60%;
+  }
+  .about-me-left > img {
+    width: 100%;
+  }
+  .about-me-right {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-bottom: 2rem;
+  }
 }
