--- a/styles/style.css
+++ b/styles/style.css
@@ -8,8 +8,6 @@
 }
 
 body {
-  border: 2px solid black;
-  
 }
 * {
   margin: 0;
@@ -19,8 +17,7 @@ body {
 .container {
   width: 75%;
   margin: 100px auto;
-  border: 2px solid tomato;
- 
+  border: 2px solid rgb(0, 0, 0);
 }
 .btn-primary {
   color: rgb(255, 255, 255);
@@ -37,9 +34,8 @@ body {
     rgb(255, 30, 30) 144.985%
   );
 }
-.section-skip-diet{
+.section-skip-diet {
   width: 95%;
-  border: 2px solid blue;
   margin: 0 auto;
 }
 .skip-container {
@@ -58,9 +54,8 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 3.5rem;
-
 }
-.skip-left > p {
+p {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   font-size: 1.2rem;
@@ -76,7 +71,7 @@ body {
 .skip {
   color: rgb(255, 30, 30);
 }
- .overley-img img {
+.overley-img img {
   width: 70%;
   padding-left: 10%;
 }
@@ -88,4 +83,37 @@ body {
   position: absolute;
   left: -2%;
   bottom: 4.5%;
+}
+
+/* About ME section */
+
+.about-me {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-image: url(../images/shapes/7.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.about-me-right > h1 {
+  color: rgb(112, 112, 112);
+  font-family: Montserrat;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+.about-me-left {
+  width: 30%;
+}
+.about-me-left > img {
+  width: 70%;
+  padding-top: 100px;
+  margin-bottom: -3.5px;
+}
+.about-me-right {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
