--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -6,7 +6,7 @@
   .container {
     width: 90%;
     margin: 70px auto;
-    border: 2px solid tomato;
+    /* border: 2px solid tomato; */
   }
   .skip-container {
     flex-direction: column;
@@ -20,7 +20,7 @@
   p {
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
-    font-size: 1rem;
+    font-size: .9rem;
     color: rgb(130, 130, 130);
   }
   .overley-img img {
@@ -59,6 +59,11 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding-bottom: 2rem;
+    padding: 0 1rem 2rem;
+  }
+  .recipies-contect{
+    width: 90%;
+    text-align: center;
+    margin: 0 auto;
   }
 }
