--- a/styles/style.css
+++ b/styles/style.css
@@ -12,12 +12,14 @@ body {
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: Montserrat;
 }
 /* Shared styles */
 .container {
   width: 75%;
   margin: 100px auto;
-  border: 2px solid rgb(0, 0, 0);
+  /* border: 2px solid rgb(0, 0, 0); */
 }
 .btn-primary {
   color: rgb(255, 255, 255);
@@ -41,6 +43,7 @@ body {
 .skip-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .skip-left {
@@ -58,13 +61,13 @@ body {
 p {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   color: rgb(130, 130, 130);
+  line-height: 120%;
 }
 
 .skip-right {
   width: 100%;
-  /* border: 2px solid red; */
   position: relative;
 }
 
@@ -72,16 +75,16 @@ p {
   color: rgb(255, 30, 30);
 }
 .overley-img img {
-  width: 70%;
+  width: 100%;
   padding-left: 10%;
 }
 .bg-img img {
-  width: 60%;
+  width: 100%;
   padding-left: 20%;
 }
 .overley-img {
   position: absolute;
-  left: -2%;
+  left: -7%;
   bottom: 4.5%;
 }
 
@@ -116,4 +119,49 @@ p {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+/* My recipies Section  */
+
+.recipies-contect {
+  width: 40%;
+  text-align: center;
+  margin: 0 auto;
+}
+.card-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 80px;
+}
+.card {
+  width: 325px;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  margin: 20px;
+}
+.card img {
+  width: 100%;
+  height: auto;
+}
+.card-content {
+  padding: 16px;
+}
+.card-content h3 {
+  font-size: 1.5rem;
+  margin-bottom: 8px;
+}
+.card-content p {
+  font-size: 1rem;
+}
+.card-content .btn {
+  display: inline-block;
+  padding: 8px 16px;
+  background-color: brown;
+  color: #ffff;
+  text-decoration: none;
+  border-radius: 4px;
+  margin-top: 1rem;
 }
