--- a/styles/style.css
+++ b/styles/style.css
@@ -165,3 +165,26 @@ p {
   border-radius: 4px;
   margin-top: 1rem;
 }
+
+/* Pre-footer */
+
+.pre-footer-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 1rem;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  width: 75%;
+}
+.pre-footer-card {
+  width: 325px;
+  padding: 30px;
+  text-align: center;
+}
+.pre-footer-card h1 {
+  font-size: 3rem;
+}
