--- a/styles/style.css
+++ b/styles/style.css
@@ -188,3 +188,20 @@ p {
 .pre-footer-card h1 {
   font-size: 3rem;
 }
+
+/* Footer */
+.footer{
+background-color: black;
+padding: 5rem 0;
+text-align: center;
+margin-bottom: -100px;
+}
+.footer h3{
+  color: #ffff;
+  font-size: 2rem;
+  line-height: 2;
+  
+}
+.eat{
+  color: rgb(251, 162, 79);
+}
